# mycoforge

./: .gitignore  Cargo.toml  README.md  bacon.toml
.github/workflows/: codecov.yml  rust.yml
benches/: symbolic_regression.rs
spec/: README.typ
src/: genotype.rs  lib.rs  main.rs  syntax_tree.rs
src/common/: mod.rs  traits.rs  types.rs
src/dataset/: core.rs  dataset.rs  error.rs  logger.rs  mod.rs
src/dataset/loaders/: csv_loader.rs  mod.rs  parquet_loader.rs
src/genotype/: crossover.rs  enums.rs  genotype.rs  init.rs  mod.rs  mutation.rs  selection.rs  traits.rs
src/loggers/: core.rs  mod.rs
src/operators/: builder.rs  functions.rs  mod.rs  sampler.rs  set.rs
src/optimizers/: ga.rs
src/population/: core.rs  mod.rs
src/tree/: mod.rs
src/tree/core/: individual.rs  mod.rs  sampler.rs  tree.rs
src/tree/fitness/: dataset.rs  evaluate.rs  mod.rs
src/tree/operators/: crossover.rs  errors.rs  init.rs  mod.rs  mutation.rs  select.rs
tests/fixtures/: all_populations.json  polynomial_dataset.csv  test_data.parquet  test_f1.csv  test_metadata_f1.csv
tests/integration/: ea_tests.rs  mod.rs
tests/unit/: crossover_tests.rs  dataset_tests.rs  evaluate_tests.rs  functions_test.rs  individual_tests.rs  init_tests.rs  logger_tests.rs  mod.rs  mutation_tests.rs  sampler_tests.rs  select_tests.rs  set_tests.rs  tree_tests.rs
