[package]
name = "mycoforge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
csv = "1.3.1"
env_logger = "0.11.3"
log = "0.4.21"
postgres = "0.19.9"
proptest = "1.5.0"
rand = "*"
rayon = "1.10.0"
rstest = "0.23.0"
serde = { version = "1.0.217", optional = true }
serde_json = {version = "1.0.134", optional = true }
tokio = { version ="1.42.0", features = ["rt-multi-thread", "test-util", "macros"] }
tokio-postgres = "0.7.12"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[[bench]]
name = "symbolic_regression"
harness = false
